Bug 435386 - Press 'Show the tag box options' in Brush Presets docker -> Krita freezes
Summary: Press 'Show the tag box options' in Brush Presets docker -> Krita freezes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-05 14:10 UTC by acc4commissions
Modified: 2021-04-08 08:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2021-04-05 14:10:27 UTC
SUMMARY
The title says it all.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: Win10 x64
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 acc4commissions 2021-04-05 14:11:02 UTC
krita-nightly-x64-5.0.0-prealpha-8aee6371a5
Comment 2 Halla Rempt 2021-04-06 10:41:38 UTC
Doesn't hang here...
Comment 3 Halla Rempt 2021-04-08 08:53:57 UTC
This is a windows-only bug, as far as I can tell.
Comment 4 Halla Rempt 2021-04-08 08:56:13 UTC
Git commit db68e2d55e63cc1b20b6783acb2761dc225013c6 by Halla Rempt.
Committed on 08/04/2021 at 08:55.
Pushed by rempt into branch 'master'.

Check whether there is a currently selected tag before dereferencing

This crashes on Windows, though weirdly enough not on Linux.

M  +6    -1    libs/resourcewidgets/KisTagChooserWidget.cpp

https://invent.kde.org/graphics/krita/commit/db68e2d55e63cc1b20b6783acb2761dc225013c6