Check whether there is a currently selected tag before dereferencing

This crashes on Windows, though weirdly enough not on Linux.

BUG:435386